kubernetes/apps/home-automation/home-assistant/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant
  labels:
    app: home-assistant
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - hass.${domain}
        - hass-code.${domain}
      secretName: tls-hass
  rules:
    - host: hass.${domain}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: home-assistant
                port:
                  name: http
    - host: hass-code.${domain}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: home-assistant-codeserver
                port:
                  name: codeserver
